# rudoro

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  main.rs  ui.rs
