[package]
name = "rudoro"
version = "0.9.0"
edition = "2021"
description = "A TUI Pomodoro timer written in Rust"
authors = ["Davin Benfield"]
license = "MIT"

[dependencies]
clap = { version = "=4.5.27", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
# Transitive pin: keep building on rustc 1.81 (newer unicode-segmentation raises MSRV).
unicode-segmentation = "=1.11.0"
